# rabbitmq

./: Makefile  README.md  TODO.md  compose.yml
consumer/: Dockerfile  Makefile  compose.yml  main.py  pyproject.toml
consumer/src/: consumer.py  print_resolver.py  printer.py  resolver.py  system_printer.py
consumer/tests/: test_consumer.py
producer/: Makefile  compose.yml  main.py  pyproject.toml
producer/src/: logger.py  producer.py
producer/tests/: test_producer.py
